<resources>
    <string name="app_name">Daily Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Tasks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tasks</string>
    <string name="menu_recycleBin">Recycle Bin</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_helpFeedback">Help &amp; Feedback</string>
    <string name="menu_support">Support Me</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="settings">Settings</string>
    <string name="help_amp_feedback">Help &amp; Feedback</string>
    <string name="support_me">Support Me</string>
    <string name="drawerButtonLabel">drawerButton</string>
    <string name="addTaskLabel">addTaskLabel</string>
    <string name="current_date">Current Date</string>
    <string name="supportText">Want to support a poor student? You can buy me a coffee using this link:   Or watch an ad:</string>
    <string name="helpFeedbackText">Contact me with any improvement ideas or bugs:</string>
    <string name="completedText">Completed:</string>
    <string name="tasks">Tasks</string>
    <string name="open">Open:</string>
    <string name="checkbox">Checkbox</string>
    <string name="enter_your_task_here">Enter your task here</string>
</resources>