<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recycleBin"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/recycle_bin" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_helpFeedback"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help_amp_feedback" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/support_me" />
    </group>
</menu>